# crunch

./: Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
src/: consts.rs  ffmpeg.rs  main.rs  utilities.rs
src/ffmpeg/: compress.rs  progress_bar.rs
src/utilities/: find_files.rs
